fixed overflow

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -691,6 +691,10 @@ video {
   max-width: 1400px;
 }
 
+.max-w-\[30\%\] {
+  max-width: 30%;
+}
+
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -757,6 +761,10 @@ video {
 
 .self-start {
   align-self: flex-start;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded-3xl {
@@ -1147,6 +1155,10 @@ video {
 
   .sm\:w-\[70\%\] {
     width: 70%;
+  }
+
+  .sm\:max-w-\[20\%\] {
+    max-width: 20%;
   }
 
   .sm\:grid-cols-2 {
